--- a/pset1/pset1.tex
+++ b/pset1/pset1.tex
@@ -16,7 +16,7 @@ Problem Set 1}
 
 \begin{document}
     \maketitle
-    This problem set is due on Wednesday, January 26 at 11:59 pm. Each problem part is worth 3 points.
+    This problem set is due on Wednesday, February 2 at 11:59 pm. Each problem part is worth 3 points.
 
     \begin{problem}
         Let $S$ be a set and let $A,B,C\subseteq S$. Prove that $(A\cup B)\cap C=(A\cap C)\cup(B\cap C)$.
@@ -29,7 +29,7 @@ Problem Set 1}
     \begin{problem}
         Define the Fibonacci numbers $F_0,F_1,F_2,\dots$ by $F_0=0,F_1=1$, and $F_n=F_{n-1}+F_{n-2}$ for $n\geq 2$.
         \begin{enumerate}[(a)]
-            \item Use induction to prove that $F_1+\cdots+F_n=F_{n-2}-1$.
+            \item Use induction to prove that $F_1+\cdots+F_n=F_{n+2}-1$.
             \item Use induction to prove that $F_1+F_3+F_5+\cdots+F_{2n-1}=F_{2n}$.
         \end{enumerate}
     \end{problem}
