Updates from Overleaf

--- a/pset2/pset2_solutions.tex
+++ b/pset2/pset2_solutions.tex
@@ -27,8 +27,7 @@
 \DeclareMathOperator{\Im}{Im}
 
 \title{MATH2211 Spring 2022\\
-Problem Set 2}
-\author{Due Wednesday, February 9 2022 at 11:59 pm}
+Problem Set 2 Solutions}
 
 \begin{document}
     \maketitle
