Updates from Overleaf

--- a/exam1/exam1.tex
+++ b/exam1/exam1.tex
@@ -59,7 +59,7 @@ Exam 1}
     \newpage
 
     \begin{problem}
-        (10 points) Let $\bR^\infty$ denote the space of infinite sequences of real numbers. For each $n\in\bZ^+$, let $v_n$ be the element $(n,n+1,n+2,n+3,\dots)\in\bR^\infty$. Determine, with proof, the dimension of $\Span(v_1,v_2,v_3,\dots)$.
+        (10 points) Let $\bR^\infty$ denote the space of infinite sequences of real numbers. For each $n\in\bZ^+$, let $v_n$ be the element $(n,n+1,n+2,n+3,\dots)\in\bR^\infty$. Prove that $\Span(v_1,v_2,v_3,\dots)$ is finite dimensional and determine its dimension.
     \end{problem}
     \vfill
 \end{document}
