--- a/pset7/pset7.tex
+++ b/pset7/pset7.tex
@@ -50,17 +50,18 @@ Problem Set 7}
     \begin{problem}
         \leavevmode\begin{enumerate}[(a)]
             \item Prove that if $T\colon V\to W$ is surjective, then $^tT\colon W^*\to V^*$ is injective.
+            \item Prove that if $T\colon V\to W$ is injective, then $^tT\colon W^*\to V^*$ is surjective.
             \item Prove that every linear transformation $T\colon V\to W$ can be factored as a composition
             \[V\overset{T'}{\twoheadrightarrow} U\overset{i}{\hookrightarrow}W,\]
             where $T'$ is surjective and $i$ is injective. (Hint: Set $U=\im T$.)
-            \item Recall that the rank of a linear transformation $T\colon V\to W$ is defined to be $\dim\im T$. Use parts (a) and (b) to prove that $\rank(T)=\rank(^tT)$.
+            \item Recall that the rank of a linear transformation $T\colon V\to W$ is defined to be $\dim\im T$. Use parts (a), (b), and (c) to prove that $\rank(T)=\rank(^tT)$.
         \end{enumerate}
     \end{problem}
 
     \begin{problem}
         Let $V$ be a vector space. Given a nonzero element $v\in V$ and a nonzero linear functional $\lambda\colon V\to \bR$, we can make a linear transformation $T_{v,\lambda}\colon V\to V$ by sending $x\in V$ to $\lambda(x)\cdot v$. Prove that $T$ has rank 1, and prove that every rank 1 linear transformation from $V$ to $V$ is equal to $T_{v,\lambda}$ for some $0\neq v\in V$ and $0\neq \lambda\colon V\to \bR$.
 
-        Hint for the second part: Problem 3(b) is very helpful.
+        Hint for the second part: Problem 3(c) is very helpful.
     \end{problem}
 
     \begin{problem}
