--- a/pset6/pset6_solutions.tex
+++ b/pset6/pset6_solutions.tex
@@ -27,7 +27,7 @@
 \DeclareMathOperator{\im}{im}
 
 \title{MATH2211 Spring 2022\\
-Problem Set 6}
+Problem Set 6 Solutions}
 \author{Due Wednesday, March 23, 2022 at 11:59 pm}
 
 \begin{document}
