Updates from Overleaf

--- a/pset7/pset7_solutions.tex
+++ b/pset7/pset7_solutions.tex
@@ -134,7 +134,7 @@ Problem Set 7 Solutions}
             \begin{solution}
                 This can be done with matrices, but here is a neater proof. First, write $[x^2]$ as the linear functional $P_2(\bR)\to F; p\mapsto \text{the coefficient of }x^2\text{ in }p$. This just lets us have a convenient name to call this functional.
                 
-                For any polynomial $p\in P_2(\bR)$, we have $(^t(\frac d{dx})[x^2])p=[x^2]\frac{dp}{dx}$. Now, the derivative of a polynomial of degree 2 has degree 1, so $[x^2]\frac{dp}{dx}=0$. Hence $[x^2]\in\ker (^t(\frac d{dx}))$ for all $p\in P_2(\bR)$. By part (a), the kernel is one-dimensional, so we are done.
+                For any polynomial $p\in P_2(\bR)$, we have $(^t(\frac d{dx})[x^2])p=[x^2]\frac{dp}{dx}$. Now, the derivative of a polynomial of degree 2 has degree 1, so $[x^2]\frac{dp}{dx}=0$. Hence $[x^2]\in\ker (^t(\frac d{dx}))$. By part (a), the kernel is one-dimensional, so we are done.
 
                 The English interpretation of the fact that $[x^2]$ spans the kernel of the transpose of the derivative operator is that the derivative of any polynomial in $P_2(\bR)$ always has $x^2$ coefficient equal to 0. This is basically what we used in the proof above, but is a new interpretation if you solved this problem with matrices.
 
