Updates from Overleaf

--- a/pset8/pset8_solutions.tex
+++ b/pset8/pset8_solutions.tex
@@ -99,7 +99,7 @@ Problem Set 8}
     \begin{solution}
         Let $A$ be an $n\times n$ stochastic matrix. Each column of $A-I$ adds to 0, therefore the image of $A-I$ is contained in the subspace of $F^n$ of vectors whose entries add to 0. Hence $A-I$ is not surjective, therefore not invertible, therefore 1 is an eigenvalue of $A$.
 
-        One may also notice that $(1,1,\dots,1)$ is a left eigenvector of $A$, meaning that 1 is an eigenvalue of $^tA$, and use the fact that $A$ and $^tA$ share ths same eigenvalues. (Although this isn't a result we have proved in the course\dots)
+        One may also notice that $(1,1,\dots,1)$ is a left eigenvector of $A$ with eigenvalue 1, meaning that 1 is an eigenvalue of $^tA$, and use the fact that $A$ and $^tA$ share ths same eigenvalues. (Although this isn't a result we have proved in the course\dots)
 
         Here's how the two solutions are connected: Saying that the image of $A-I$ is contained in the subspace of vectors whose entries add to 0 is the same as saying that the image of $A-I$ is contained in the kernel of the row vector $(1,1,\dots,1)$. Hmm\dots
     \end{solution}
