Updates from Overleaf

--- a/exam2/exam2.tex
+++ b/exam2/exam2.tex
@@ -53,13 +53,15 @@ Exam 2}
 
     \begin{problem}
        (10 points) The \emph{right shift} operator $T\colon \bR^\infty\to\bR^\infty$ is defined by
-       \[T(a_0,a_1,a_2,\dots)=(0,a_1,a_2,\dots).\]
+       \[T(a_0,a_1,a_2,\dots)=(0,a_0,a_1,a_2,\dots).\]
        What are the eigenvalues and eigenvectors of $T$?
     \end{problem}
     \newpage
 
     \begin{problem}
         (10 points) Prove that if $T\colon V\to V$ is diagonalizable, then $T^2+T+I_V$ is also diagonalizable.
+
+        Hint: Eigenvectors.
     \end{problem}
     \vfill
     \newpage
