--- a/pset9/pset9.tex
+++ b/pset9/pset9.tex
@@ -37,7 +37,7 @@ Problem Set 9}
         A \emph{nilpotent} linear operator is defined to be a linear operator $T\colon V\to V$ such that some power of $T$ is equal to zero. In parts (b) to (d), let $N\colon V\to V$ be a nilpotent operator on a finite dimensional vector space $V$.
         \begin{enumerate}[(a)]
             \item Give an example of a $2\times 2$ real nilpotent matrix (i.e.\ a nilpotent linear operator from $\bR^2$ to $\bR^2$) none of whose entries are 0 (or prove they don't exist).
-            \item Prove that 0 is the only eigenvalue of $N$.
+            \item Now let $N$ be a nilpotent operator on a finite dimensional vector space $V$. Prove that 0 is the only eigenvalue of $N$.
             \item Let $U$ be any nonzero subspace of $V$ and suppose that $NU\subseteq U$. Prove that $NU$ is strictly contained in $U$.
             
             Hint: Use contradiction. Comment: A useful notation for strict containment is $\subsetneq$.
