--- a/pset10/pset10.tex
+++ b/pset10/pset10.tex
@@ -55,7 +55,7 @@ Problem Set 10}
         Let $V$ be an inner product space and let $U$ be a subspace of $V$. In this problem we investigate the orthogonal projection operator $P_U$.
         \begin{enumerate}[(a)]
             \item Prove that $P_U^2=P_U$ and that $P_U$ is self-adjoint (that is, $P_U=P_U^*$). Show that the identity $P_U^2=P_U$ is equivalent to saying that $P_U|_{\im P_U}=I_{\im P_U}$. 
-            \item In this problem, suppose that $U=\Span(u)^\perp$ for some nonzero vector $u\in V$. Prove that $P_U$ can be expressed as $I-u\varphi_u$ (more classically denoted $I-uu^T$).
+            \item In this problem, suppose that $U=\Span(u)^\perp$ for some nonzero unit vector $u\in V$. Prove that $P_U$ can be expressed as $I-u\varphi_u$ (more classically denoted $I-uu^T$).
             \item Prove that the eigenvalues of $P_U$ are 0 and 1, with the multiplicity of 1 being the dimension of $U$ and the multiplicity of 0 being the dimension of $U^\perp$.
             \item Prove that the eigenspace of 1 of $P_U$ is $U$ and that the eigenspace of 0 is $U^\perp$, and that $P_U$ is diagonalizable.
         \end{enumerate}
